Fix text misalignment

--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@ button {
 }
 
 .CodeMirror {
+  text-align: left;
   height: 100%;
 }
 
